--- a/config/parsing_rules.yaml
+++ b/config/parsing_rules.yaml
@@ -3,109 +3,112 @@ detection_rules:
     sections:
       contact:
         patterns:
-          - "^[A-Z][a-z]+\\s+[A-Z][a-z]+\\s+Developer"  # Match "Graduate Java Developer"
-          - "^[A-Z\\s]+$"  # All caps name
-          - "^[A-Z][a-z]+\\s+[A-Z][a-z]+$"  # Title case name
-          - "contact\\s*information"
-          - "personal\\s*details"
-          - "^\\d{3}[-\\s]?\\d{3}[-\\s]?\\d{4}"  # Phone number pattern
-          - "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$"  # Email pattern
-          - "^linkedin\\.com/in/[\\w-]+$"  # LinkedIn pattern
-          - "^github\\.com/[\\w-]+$"  # GitHub pattern
+          - 'contact\s*information'
+          - 'personal\s*details'
+          - '^\d{3}[-\s]?\d{3}[-\s]?\d{4}'
+          - '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'
+          - '^linkedin\.com/in/[\w-]+$'
+          - '^github\.com/[\w-]+$'
         required: true
       summary:
         patterns:
-          - "^summary$"
-          - "professional\\s+summary"
-          - "profile"
-          - "objective"
-          - "about\\s+me"
-          - "career\\s+objective"
-          - "^[A-Z][a-z]+\\s+[A-Z][a-z]+\\s+Developer"  # Match job title as summary
+          - '^summary$'
+          - 'professional\s+summary'
+          - 'profile'
+          - 'objective'
+          - 'about\s+me'
+          - 'career\s+objective'
         required: false
       skills:
         patterns:
-          - "^skills$"
-          - "^technical\\s+skills$"
-          - "^languages:"
-          - "^frameworks\\s+&\\s+libraries:"
-          - "^tools\\s+&\\s+ci/cd:"
-          - "^testing:"
-          - "^software\\s+design\\s+&\\s+architecture:"
-          - "^agile\\s+methodologies:"
-          - "technical\\s+skills"
-          - "skills(\\s+&\\s+competencies)?"
-          - "technologies(\\s+used)?"
-          - "tools\\s+&\\s+technologies"
-          - "core\\s+competencies"
-          - "expertise"
-          - "^programming\\s+languages$"
-          - "^frameworks$"
-          - "^tools$"
-          - "^databases$"
-          - "^methodologies$"
+          - '^skills$'
+          - '^technical\s+skills$'
+          - '^languages:'
+          - '^frameworks\s+&\s+libraries:'
+          - '^tools\s+&\s+ci/cd:'
+          - '^testing:'
+          - '^software\s+design\s+&\s+architecture:'
+          - '^agile\s+methodologies:'
+          - 'technical\s+skills'
+          - 'skills(\s+&\s+competencies)?'
+          - 'technologies(\s+used)?'
+          - 'tools\s+&\s+technologies'
+          - 'core\s+competencies'
+          - 'expertise'
+          - '^programming\s+languages$'
+          - '^frameworks$'
+          - '^tools$'
+          - '^databases$'
+          - '^methodologies$'
         required: true
       education:
         patterns:
-          - "^education$"
-          - "education(\\s+background)?"
-          - "academic(\\s+background)?"
-          - "qualifications"
-          - "academic\\s+history"
-          - "educational\\s+qualifications"
-          - "bachelor\\s+of\\s+science"
-          - "national\\s+certificate"
-          - "^wethinkcode"  # Match WeThinkCode
-          - "^university\\s+of"
-          - "^college"
-          - "^institute"
+          - '^education$'
+          - 'education(\s+background)?'
+          - 'academic(\s+background)?'
+          - 'qualifications'
+          - 'academic\s+history'
+          - 'educational\s+qualifications'
+          - 'bachelor\s+of\s+science'
+          - 'national\s+certificate'
+          - '^wethinkcode'
+          - '^university\s+of'
+          - '^college'
+          - '^institute'
         required: true
       experience:
         patterns:
-          - "^experience$"
-          - "^work\\s+experience$"
-          - "^professional\\s+experience$"
-          - "^employment\\s+history$"
-          - "^career\\s+history$"
-          - "^work\\s+history$"
-          - "^[A-Z][a-z]+\\s+[A-Z]?[a-z]*\\s*Developer"  # Match "Graduate Java Developer", "Software Developer", etc.
-          - "^[A-Z][a-z]+\\s+Developer\\s+\\([A-Za-z]+\\)"  # Match "Developer (Freelance)"
-          - "^[A-Z][a-z]+\\s+Training\\s+Developer"  # Match "AI Training Developer"
-          - "^Technical\\s+Mentor"  # Match "Technical Mentor"
-          - "^Trainee\\s+Software\\s+Developer"  # Match "Trainee Software Developer"
-          - "^[A-Z][a-z]+\\s+Engineer"  # Match any Engineer title
-          - "^[A-Z][a-z]+\\s+Consultant"  # Match any Consultant title
-          - "^[A-Z][a-z]+\\s+Analyst"  # Match any Analyst title
-          - "^[A-Z][a-z]+\\s+Manager"  # Match any Manager title
-          - "^[A-Z][a-z]+\\s+Architect"  # Match any Architect title
-          - "^[A-Z][a-z]+\\s+Lead"  # Match any Lead title
+          - 'Work Experience'
+          - 'Professional Experience'
+          - 'Employment History'
+          - 'Graduate Java Developer'
+          - 'experience'
+          - 'work\s+experience'
+          - 'professional\s+experience'
+          - 'employment\s+history'
+          - 'career\s+history'
+          - 'work\s+history'
+          - 'job history'
+          - 'career summary'
+          - 'professional background'
+          - 'positions held'
+          - '[A-Z][a-z]+\s+[A-Z]?[a-z]*\s*Developer'
+          - '[A-Z][a-z]+\s+Developer\s+\([A-Za-z]+\)'
+          - '[A-Z][a-z]+\s+Training\s+Developer'
+          - 'Technical\s+Mentor'
+          - 'Trainee\s+Software\s+Developer'
+          - '[A-Z][a-z]+\s+Engineer'
+          - '[A-Z][a-z]+\s+Consultant'
+          - '[A-Z][a-z]+\s+Analyst'
+          - '[A-Z][a-z]+\s+Manager'
+          - '[A-Z][a-z]+\s+Architect'
+          - '[A-Z][a-z]+\s+Lead'
         required: true
       projects:
         patterns:
-          - "^projects$"
-          - "^technical\\s+projects$"
-          - "portfolio"
-          - "technical\\s+projects"
-          - "personal\\s+projects"
-          - "key\\s+projects"
-          - "^[\\w\\s-]+\\s+-\\s+[\\w\\s]+\\s+app$"  # Match project titles like "FitQuest - A running fitness App"
-          - "^[\\w\\s-]+\\s+-\\s+[\\w\\s]+\\s+game$"  # Match project titles like "Brownfields - Robot Worlds Game"
-          - "^project\\s+\\d+:"  # Match "Project 1:", "Project 2:", etc.
-          - "^\\d+\\.\\s+[\\w\\s-]+"  # Match "1. Project Name", "2. Project Name", etc.
+          - '^projects$'
+          - '^technical\s+projects$'
+          - 'portfolio'
+          - 'technical\s+projects'
+          - 'personal\s+projects'
+          - 'key\s+projects'
+          - '^[\w\s-]+\s+-\s+[\w\s]+(?:app|system|platform)$'
+          - '^[\w\s-]+\s+-\s+[\w\s]+(?:game)$'
+          - '^project\s+\d+:'
+          - '^\d+\.\s+[\w\s-]+'
         required: false
       certifications:
         patterns:
-          - "^achievements\\s+&\\s+certifications$"
-          - "certifications?"
-          - "certificates?"
-          - "achievements"
-          - "awards"
-          - "honors"
-          - "accomplishments"
-          - "^hackerrank\\s+certifications?:"  # Match HackerRank certifications
-          - "^medallion"  # Match Medallion achievements
+          - '^achievements\s+&\s+certifications'
+          - 'certifications?'
+          - 'certificates?'
+          - 'awards'
+          - 'honors'
+          - 'accomplishments'
+          - '^hackerrank\s+certifications?:'
+          - '^medallion'
         required: false
   settings:
-    confidence_threshold: 0.4  # Lowered from 0.5 for better recall
+    confidence_threshold: 0.2
     min_heading_size: 10
     fuzzy_match: true
