--- a/requirements.txt
+++ b/requirements.txt
@@ -78,3 +78,7 @@ urllib3==2.5.0
 wasabi==1.1.3
 weasel==0.4.1
 wrapt==1.17.2
+transformers==4.41.2
+torch==2.3.1
+sentencepiece==0.2.0
+marker-pdf==0.2.3
